--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 <body>
     <h1>🥐 Croissant</h1>
     <p>
-      A croissant is a buttery, flaky, viennoiserie pastry of Austrian origin,
-      named for its historical crescent shape. Croissants and other viennoiserie
-      are made of a layered yeast-leavened dough
+        A croissant is a buttery, flaky, viennoiserie pastry inspired by the shape of the Austrian kipferl but using the French yeast-leavened laminated dough.
     </p>
     <footer>
       <a href="index.html" title="Home"> Homepage</a>
